--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 In Progress
 -----------
 
+06/26/2021 Experimental support for counterexamples. SLYY will now give
+           counterexamples for shift/reduce and reduce/reduce conflicts.
+           Tested on simple conflict examples, as well as the full C 2x
+           grammar.
+
 05/09/2020 Experimental support for EBNF choices.  For example:
 
 	      @('term { PLUS|MINUS term }')
